# medasist

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PERGUNTAS_EXEMPLO.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-ui.txt  requirements.txt
.claude/: settings.json
.claude/agents/pr-reviewer/: pr-reviewer.md
.claude/agents/rag_builder/: rag_bulider.md
.claude/agents/security-reviewer/: security-reviewer.md
.claude/commands/: run-tests.md
.claude/rules/: python.md
.claude/skills/git-workflow/: SKILL.md
docker/: api.Dockerfile  ui.Dockerfile
docs/business/: PRD.md  roadmap.md
docs/plan/: plan-fase-6.md  plan-fase-7.md  plan-fase-8.md  plan-fase-9.md
docs/technical/: setup.md
scripts/: ingest_docs.py
src/medasist/: config.py
src/medasist/api/: main.py  schemas.py
src/medasist/generation/: chain.py  citations.py  prompts.py
src/medasist/ingestion/: __init__.py  chunker.py  loader.py  metadata.py  pipeline.py  schemas.py
src/medasist/profiles/: __init__.py  schemas.py
src/medasist/retrieval/: __init__.py  (+1 more)
tests/: conftest.py
tests/api/: conftest.py  test_health.py  test_ingest.py  test_query.py
tests/generation/: test_chain.py  test_citations.py  test_prompts.py
tests/ingestion/: test_chunker.py  test_loader.py  test_metadata.py  test_pipeline.py
tests/profiles/: test_schemas.py
tests/retrieval/: test_retriever.py
tests/scripts/: test_ingest_docs.py
tests/ui/: conftest.py  test_client.py
tests/vectorstore/: test_store.py
(+6 files in other folders)
